@@ -1,4 +1,5 @@
 
+  * You can rearrange panels in PlayLists panel
   * You can select which filters to show in the library and radio
   * You can rearrange the panels in the screen
   * Added support to playlist (m3u,pls,axs,xpfs) to Player. You can drop it
